--- a/src/styles/rightBody.css
+++ b/src/styles/rightBody.css
@@ -1,18 +1,117 @@
 .rightBody-container {
     padding: 20px;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    /* height: 100vh; */
 }
 
 .cards-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    height: 100%;
+    width: 100%;
 }
 
-.card-list {
-    list-style: none;
-    padding: 0;
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    height: 100%;
+    width: 100%;
+}
+
+.card {
+    border: 1px solid #E5E5E5;
+    border-radius: 8px;
+    padding: .5rem;
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+.card img {
+    width: 100%;
+    height: 75%;
+    border-radius: 8px;
+    transition: transform .4s ease;
+    object-fit: cover;
+}
+
+.card:hover {
+    cursor: pointer;
+}
+
+.card-info {
     display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
+    justify-content: space-between;
+    gap: 1rem;
+    padding: .5rem;
+}
+
+.card-info p {
+    font-size: .45rem;
+    font-weight: bold;
+}
+
+.card-colour {
+    display: flex;
+    gap: .25rem;
+    padding-left: .5rem;
+}
+
+.color {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+}
+
+.navbar-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 4rem;
+}
+
+.next-page {
+    display: flex;
+    gap: 1rem;
+    background-color: #000;
+    color: #fff;
+    padding: .1rem .75rem;
+    border-radius: 12px;
+}
+
+.page-container {
+    display: flex;
+    gap: 1rem;
+}
+
+.page {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.page input[type ='text'] {
+    width: 4rem;
+    height: 2rem;
+    text-align: center;
+    border-radius: 19px;
+    padding: .15rem .25rem;
+}
+
+.page-help {
+    text-align: center;
+    font-size: .75rem;
+}
+
+.page-help:hover {
+    cursor: pointer;
+}
+
+/* Responsive design for tablets */
+@media (max-width: 768px) {
+    .card-container {
+        grid-template-columns: repeat(2, 1fr); /* 2-grid layout for tablets */
+    }
 }
